# sapphire-ledger

./: .gitignore  Cargo.toml  README.md
docs/: design.md
sapphire-ledger-cli/: Cargo.toml
sapphire-ledger-cli/src/: main.rs
sapphire-ledger-core/: Cargo.toml
sapphire-ledger-core/src/: account.rs  assertion.rs  config.rs  error.rs  lib.rs  repository.rs  transaction.rs  validate.rs  workspace.rs
sapphire-ledger-core/tests/: parse.rs  paths.rs  validate.rs
sapphire-ledger-desktop/: Cargo.toml
sapphire-ledger-desktop/src/: main.rs
sapphire-ledger-mcp/: Cargo.toml
sapphire-ledger-mcp/src/: lib.rs
