[workspace]
members = [
    "sapphire-ledger-cli",
    "sapphire-ledger-core",
    "sapphire-ledger-desktop",
    "sapphire-ledger-mcp",
]
resolver = "3"

[workspace.package]
description = "Local-first double-entry household ledger that keeps your data alive as plain text - timeless like fossils"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/sapphire-ledger"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
indexmap = { version = "2", features = ["serde"] }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1" }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev.package."*"]
opt-level = 1
